# mini-projet-unix

./: .gitignore  README.md
cli-serv-TCP/: Makefile  clientTCP_IHM.c  clientTCP_fork.c  presentation.docx  serveurTCP_fork.c
tcp-server-client/: CMakeLists.txt  compile.sh  makefile  presentation.docx  tcp_client.c  tcp_server.c
udp-server-client/: build_and_link.sh  client  présentation.docx  server  udp_client  udp_client.c  udp_server  udp_server.c
